<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="zhuozhuo.com.zhuo.view.activity.LoginPhoneActivity">

    <zhuozhuo.com.zhuo.widget.TitleBarLayout
        android:id="@+id/titlebar_loginphone"
        android:layout_width="match_parent"
        app:title_bar_background="#f76243"
        app:title_bar_right_linear_background="#f76243"
        app:title_bar_left_linear_background="#f76243"
        app:title_bar_left_text_background="#f76243"
        app:title_bar_right_text_background="#f76243"
        android:layout_height="wrap_content"></zhuozhuo.com.zhuo.widget.TitleBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <!--手机号码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/username" />

            <EditText
                android:layout_marginLeft="5dp"
                android:id="@+id/login_edit1"
                style="@style/login_edit_style1"
                android:hint="@string/login_text1"
                android:inputType="number"
                android:maxLength="11" />

            <ImageView
                android:id="@+id/login_image1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/login_clear"
                android:visibility="gone" />
        </LinearLayout>

        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/userpassword" />

            <EditText
                android:layout_marginLeft="5dp"
                android:id="@+id/login_edit2"
                style="@style/login_edit_style1"
                android:hint="@string/login_text2"
                android:inputType="textPassword"
                android:maxLength="20" />

            <ImageView
                android:id="@+id/login_image2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/login_clear"
                android:visibility="gone" />

        </LinearLayout>

        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <TextView
            android:id="@+id/login_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login_text3"
            android:textColor="@color/app_gray" />

        <Button
            android:id="@+id/login_button1"
            style="@style/login_button_style1"
            android:text="@string/login_text4" />

        <Button
            android:id="@+id/login_button2"
            style="@style/login_button_style1"
            android:layout_marginTop="20dp"
            android:text="@string/login_text6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text5" />

            <TextView
                android:id="@+id/login_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/register_text6"
                android:textColor="@color/main_color1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text9" />

            <TextView
                android:id="@+id/login_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/register_text7"
                android:textColor="@color/main_color1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

