<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zhuozhuo.com.zhuo.view.activity.RegisterActivity">

    <zhuozhuo.com.zhuo.widget.TitleBarLayout
        android:id="@+id/titlebar_register"
        android:layout_width="match_parent"
        app:title_bar_background="#f76243"
        app:title_bar_right_linear_background="#f76243"
        app:title_bar_left_linear_background="#f76243"
        app:title_bar_left_text_background="#f76243"
        app:title_bar_right_text_background="#f76243"
        android:layout_height="wrap_content"></zhuozhuo.com.zhuo.widget.TitleBarLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <!--手机号码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:gravity="center_vertical">

            <TextView
                android:gravity="center_vertical"
                style="@style/login_edit_style2"
                android:text="@string/register_text16" />

            <EditText
                android:id="@+id/register_edit1"
                style="@style/login_edit_style1"
                android:hint="@string/login_text1"
                android:inputType="number"
                android:maxLength="11" />

            <ImageView
                android:id="@+id/register_image1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/login_clear"
                android:visibility="gone" />
        </LinearLayout>

        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <!--验证码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:gravity="center_vertical">
            <TextView
                android:gravity="center_vertical"
                style="@style/login_edit_style2"
                android:text="@string/register_text17" />
            <EditText
                android:id="@+id/register_edit2"
                style="@style/login_edit_style1"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:hint="@string/register_text2"
                android:maxLength="10" />

            <ImageView
                android:id="@+id/register_image2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/login_clear"
                android:visibility="gone" />

            <Button
                android:id="@+id/register_button1"
                android:layout_width="125dp"
                android:layout_height="@dimen/height_35"
                android:background="@drawable/blue_shape3"
                android:text="@string/register_text3"
                android:textColor="@color/main_color1" />
        </LinearLayout>

        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />

        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:gravity="center_vertical">
            <TextView
                android:gravity="center_vertical"
                style="@style/login_edit_style2"
                android:text="@string/register_text18" />
            <EditText
                android:id="@+id/register_edit3"
                style="@style/login_edit_style1"
                android:layout_marginLeft="5dp"
                android:hint="@string/register_text4"
                android:inputType="textPassword"
                android:maxLength="12" />

            <ImageView
                android:id="@+id/register_image3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/login_clear"
                android:visibility="gone" />

        </LinearLayout>

        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />
        <!--昵称-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:gravity="center_vertical">
            <TextView
                android:gravity="center_vertical"
                style="@style/login_edit_style2"
                android:text="@string/register_text19" />
            <EditText
                android:id="@+id/register_edit4"
                style="@style/login_edit_style1"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/register_text15"
                android:maxLength="20" />

            <ImageView
                android:id="@+id/register_image4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/login_clear"
                android:visibility="gone" />

        </LinearLayout>

        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />
        <RadioGroup
            android:id="@+id/register_radiogroup"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/button_mr"
                android:text="男"
                android:checked="true"
                android:background="@drawable/register_button_selector"
                android:button="@null"/>
            <RadioButton
                android:gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/button_ms"
                android:text="女"
                android:background="@drawable/register_button_selector"
                android:button="@null"/>
        </RadioGroup>

        <Button
            android:id="@+id/register_button2"
            style="@style/login_button_style1"
            android:layout_marginTop="15dp"
            android:text="@string/register_text20" />
    </LinearLayout>

</LinearLayout>
