<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_mine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zhuozhuo.com.zhuo.view.activity.MineActivity">
    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/minedetail_bar"
        android:layout_width="match_parent"
        app:titleBarBackground="#f76243"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical">
        <!--头像-->
        <LinearLayout
            android:id="@+id/mine_linear1"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/mine_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_text6" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <zhuozhuo.com.zhuo.widget.CircleImageView
                android:id="@+id/iv_mine"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <ImageView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/next" />
        </LinearLayout>
        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />
        <!--昵称-->
        <LinearLayout
            android:id="@+id/mine_linear2"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/mine_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_text7" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/mine_name"
                style="@style/mine_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/next" />
        </LinearLayout>
        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />
        <!--性别-->
        <LinearLayout
            android:id="@+id/mine_linear3"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                style="@style/mine_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_text8" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/mine_sex"
                style="@style/mine_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/next" />
        </LinearLayout>
        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />
        <!--手机号码-->
        <LinearLayout
            android:id="@+id/mine_linear4"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                style="@style/mine_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_text9" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/mine_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />
        <!--学院信息-->
        <LinearLayout
            android:id="@+id/mine_linear5"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                style="@style/mine_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_text10" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/mine_location"
                android:textSize="@dimen/text_size_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/next" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackground" />
        <!--日常爱好-->
        <LinearLayout
            android:id="@+id/mine_linear6"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                style="@style/mine_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_text11" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/mine_hobby"
                android:textSize="@dimen/text_size_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/next" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                style="@style/mine_text_style"
                android:text="好人卡:" />
            <TextView
                android:id="@+id/tv_card1"
                style="@style/mine_text_style" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                style="@style/mine_text_style"
                android:text="吃货卡:" />
            <TextView
                android:id="@+id/tv_card2"
                style="@style/mine_text_style" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                style="@style/mine_text_style"
                android:text="幽默卡:" />
            <TextView
                android:id="@+id/tv_card3"
                style="@style/mine_text_style" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                style="@style/mine_text_style"
                android:text="宅男卡:" />

            <TextView
                android:id="@+id/tv_card4"
                style="@style/mine_text_style" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                style="@style/mine_text_style"
                android:text="渣娚卡:" />

            <TextView
                android:id="@+id/tv_card5"
                style="@style/mine_text_style" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                style="@style/mine_text_style"
                android:text="高颜卡:" />

            <TextView
                android:id="@+id/tv_card6"
                style="@style/mine_text_style" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                style="@style/mine_text_style"
                android:text="运动卡:" />

            <TextView
                android:id="@+id/tv_card7"
                style="@style/mine_text_style" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                style="@style/mine_text_style"
                android:text="气质卡:" />

            <TextView
                android:id="@+id/tv_card8"
                style="@style/mine_text_style" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                style="@style/mine_text_style"
                android:text="拍拖吧:" />

            <TextView
                android:id="@+id/tv_card9"
                style="@style/mine_text_style" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
